--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="content">
+
       <div id="headline">
         <div id="name">Hi there, I'm Shradha </div>
         <span class="hand">👋</span> 
@@ -25,72 +26,69 @@
           In my college, I am a part of a technical society, taking classes for juniors to share my experience and knowledge of stuff like data structures, algorithms and web development.
           Apart from that I have also been a member of the theatrical society to do stage plays.
           For leisure, I enjoy watching a lot of TV series and movies.
-         <br>
+          <br>
         </p>
       </div>
 
-     <div id="projects">
+      <div id="projects">
         <h1>Recent projects</h1>
         <ul>
-            <li>
-              <b> Twitter Bot Detection </b> - Machine Learning(RVM)
-              <button onclick="addProjectDetail(this.id)" id="a">Details</button>
-              <div id="a-div">
-              </div>
-              <br>
-            </li>
-            <li>
-              <b> Character Recognition Model </b> - Machine Learning(SVM with KNN)
-              <button onclick="addProjectDetail(this.id)" id="b">Details</button>
-              <div id="b-div">
-              </div>
-              <br>
-            </li>
-            <li>
-              <b> Healthcare Portal </b> - Database Management
-              <button onclick="addProjectDetail(this.id)" id="c">Details</button>
-              <div id="c-div">
-              </div>
-              <br>
-            </li>
-            <li>
-              <b> CloudPoint </b> - Web development &amp; APIs
-              <button onclick="addProjectDetail(this.id)" id="d">Details</button>
-              <div id="d-div">
-              </div>
-              <br>
-            </li>
+          <li>
+            <b> Twitter Bot Detection </b> - Machine Learning(RVM)
+            <button onclick="showProjectDetail(this.id)" id="a" tabindex="1">Details</button>
+            <div id="a-div">
+            </div>
+            <br>
+          </li>
+          <li>
+            <b> Character Recognition Model </b> - Machine Learning(SVM with KNN)
+            <button onclick="showProjectDetail(this.id)" id="b" tabindex="2">Details</button>
+            <div id="b-div">
+            </div>
+            <br>
+          </li>
+          <li>
+            <b> Healthcare Portal </b> - Database Management
+            <button onclick="showProjectDetail(this.id)" id="c" tabindex="3">Details</button>
+            <div id="c-div">
+            </div>
+            <br>
+          </li>
+          <li>
+            <b> CloudPoint </b> - Web development &amp; APIs
+            <button onclick="showProjectDetail(this.id)" id="d" tabindex="4">Details</button>
+            <div id="d-div">
+            </div>
+            <br>
+          </li>
         </ul>
-     </div>
+      </div>
 
-     <div id="internships">
+      <div id="internships">
         <h1>Work Experience</h1>
         <ul>
-            <li>
+          <li>
             <b> Microsoft R&amp;D, Hyd (2020)</b> - Software Engineer Intern 
             </li> <br>
             <li>
             <b> DRDO, Delhi (2019)</b> - Research Trainee 
-            </li> <br>
-            <li>
+          </li> <br>
+          <li>
             <b>Microsoft R&amp;D, Hyd (2019)</b> - Software Engineer Intern 
-            </li> <br>
-            <li>
+          </li> <br>
+          <li>
             <b> NSUT, Delhi (2020)</b> - Academic Research 
-            </li> <br>
+          </li> <br>
         </ul>
-     </div>
+      </div>
 
-    <div id="contact">
-      <span class="cont-span">Get In Touch!</span>
-      <span class="cont-span"><a href="https://www.linkedin.com/in/shradha-khapra">LinkedIn</a></span>
-      <span class="cont-span"><a href="https://github.com/shradha-khapra">Github</a></span>
-      <span class="cont-span"><a href="https://google.com">Send me an email :') [yet to come]</a></span> <!-- YES TO BE IMPLEMENTED -->
-    </div>    
-    <br><br>
-      <!-- <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div> -->
+      <div id="contact">
+        <span class="cont-span">Get In Touch!</span>
+        <span class="cont-span"><a href="https://www.linkedin.com/in/shradha-khapra">LinkedIn</a></span>
+        <span class="cont-span"><a href="https://github.com/shradha-khapra">Github</a></span>
+        <span class="cont-span"><a href="https://google.com">Send me an email :') [yet to come]</a></span> <!-- YES TO BE IMPLEMENTED -->
+      </div>    
+      <br><br>
     </div>
   </body>
 </html>
