Fix indentation, ids & JSDoc param

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -35,25 +35,25 @@
         <ul class="List">
           <li>
             <b> Twitter Bot Detection </b> - Machine Learning(RVM)
-            <button onclick="showProjectDetail(event)" id="a" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="1" tabindex="0">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> Character Recognition Model </b> - Machine Learning(SVM with KNN)
-            <button onclick="showProjectDetail(event)" id="b" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="2" tabindex="0">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> Healthcare Portal </b> - Database Management
-            <button onclick="showProjectDetail(event)" id="c" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="3" tabindex="0">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> CloudPoint </b> - Web development &amp; APIs
-            <button onclick="showProjectDetail(event)" id="d" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="4" tabindex="0">Details</button>
             <br>
           </li>
         </ul>
@@ -65,7 +65,7 @@
           <li>
             <b> Microsoft R&amp;D, Hyd (2020)</b> - Software Engineer Intern 
           </li> <br>
-            <li>
+          <li>
             <b> DRDO, Delhi (2019)</b> - Research Trainee 
           </li> <br>
           <li>
