Map button id to description index & add role

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,7 @@
         <span class="Hand">👋</span> 
       </div>
       <br>
-      <img class="MyPic" src="/images/my_photo.jpeg" alt="My Picture."> 
+      <img class="ProfilePic" src="/images/my_photo.jpeg" alt="My Picture."> 
       <br><br>
 
       <div class="AboutMeText">
@@ -35,25 +35,25 @@
         <ul class="List">
           <li>
             <b> Twitter Bot Detection </b> - Machine Learning(RVM)
-            <button onclick="showProjectDetail(event)" id="1" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="0" tabindex="0" role="Project Description Button">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> Character Recognition Model </b> - Machine Learning(SVM with KNN)
-            <button onclick="showProjectDetail(event)" id="2" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="1" tabindex="0" role="Project Description Button">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> Healthcare Portal </b> - Database Management
-            <button onclick="showProjectDetail(event)" id="3" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="2" tabindex="0" role="Project Description Button">Details</button>
             <br>
           </li>
           <br>
           <li>
             <b> CloudPoint </b> - Web development &amp; APIs
-            <button onclick="showProjectDetail(event)" id="4" tabindex="0">Details</button>
+            <button onclick="showProjectDetail(event)" id="3" tabindex="0" role="Project Description Button">Details</button>
             <br>
           </li>
         </ul>
