Add onload function & JavaDoc

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body class="MainContainer" onload="showComments()">
+  <body class="MainContainer">
     <div class="Content">
 
       <div class="Headline">
