Add server and data store to portfolio (#4)
* Update the README.md file to describe the repo.

* Add basic portfolio page

* Make required code changes

* Change ids, TODO, JS function & comment

* Fix indentation, ids & JSDoc param

* Fix Js comments

* Map button id to description index & add role

* Add server & datastore to portfolio

* Add onload function & JavaDoc

* Fix indentation issues

* Add static entity strings & JavaDoc

* Modify JavaDoc

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -86,5 +86,19 @@
       </div>    
       <br><br>
     </div>
+
+    <div>
+      <h4>Wish to add any messages/comments about the portfolio?</h4><br><br>
+      <form action="/add-comment" method="POST">
+        <label for="message">Your Message</label><br>
+        <input type="text" id="message" name="message" placeholder="I prefer a lighter shade of blue for background."><br><br>
+        <label for="name">Your Name</label><br>
+        <input type="text" id="name" name="name" placeholder="Jane Doe"><br><br>
+        <input type="submit" value="Add my Comment"><br><br>
+      </form>
+      <br>
+      <div id="CommentsBoard">
+      </div>
+    </div>
   </body>
 </html>
