Show bar chart for prog languages

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
   </head>
   <body class="MainContainer">
@@ -98,6 +99,11 @@
       </form>
       <br>
       <div id="CommentsBoard">
+      </div>
+    </div>
+
+    <div class="ChartContainer">
+      <div id="LangChartContainer">
       </div>
     </div>
   </body>
